--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RANT VAULT</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="custom.css">
 </head>
 <body class="min-h-screen bg-slate-900 text-slate-100">
     <div class="container mx-auto px-4 py-16">
