--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RANT VAULT</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="custom.css">
 </head>
 <body class="min-h-screen bg-slate-900 text-slate-100">
-    <div class="container mx-auto px-4 py-16">
+    <div class="container mx-auto px-4 sm:px-6 py-16">
         <div class="text-center max-w-4xl mx-auto">
             <div class="flex items-center justify-center gap-4 mb-8">
-                <img src="rantvaultlogo.png" alt="Rant Vault Logo" class="w-20 h-20 rounded-lg">
+                <img src="rantvaultlogo.png" alt="Rant Vault Logo" class="w-16 h-16 sm:w-20 sm:h-20 rounded-lg">
                 <h1 class="text-5xl md:text-6xl font-bold text-white">RANT VAULT</h1>
             </div>
             <p class="text-2xl md:text-3xl text-slate-300 mb-6 font-medium">Lock away your words. Cool off. Decide later.</p>
@@ -115,7 +116,7 @@
     </div>
 
     <footer class="border-t border-slate-800 py-8 mt-16">
-        <div class="container mx-auto px-4 text-center">
+        <div class="container mx-auto px-4 sm:px-6 text-center">
             <p class="text-slate-400 text-lg">
                 Made by someone who's sent too many angry emails.<br>
                 <span class="text-slate-300 font-medium">Impulse-control for the modern human.</span>
